@@ -86,9 +86,8 @@ public interface ObjectContext extends Serializable {
      * previously cached in this context, a hollow object is created and returned to the
      * caller. No DB query is performed to resolve an object.
      * <p>
-     * This method will cause an exception if 'objectFromAnotherContext' has a temporary
-     * ObjectId and a copy of an object can't be found in this context or its parent
-     * DataChannel.
+     * Note that passing an object with a non-existing id, may later result in
+     * FaultFailureException on attempt to read returned object properties.
      * 
      * @since 3.1
      */
